--- a/Pyspark_Master/M7_Expert/M1_groupBy_and_Join.ipynb
+++ b/Pyspark_Master/M7_Expert/M1_groupBy_and_Join.ipynb
@@ -427,6 +427,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1094daae",
+   "metadata": {},
+   "source": [
+    "If want to broadcast join explicitly"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "245edb09",
