--- a/Pyspark_Master/M7_Expert/M2_Partition_Skew.ipynb
+++ b/Pyspark_Master/M7_Expert/M2_Partition_Skew.ipynb
@@ -87,6 +87,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0bf4aa37",
+   "metadata": {},
+   "source": [
+    "SQL Normal Join (shuffle sort merge join) and by default this broad cast join"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc6fa805",
+   "metadata": {},
+   "source": [
+    "plz check it on the SQL tab in spark UI"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "a2feba26",
@@ -94,6 +110,14 @@
    "outputs": [],
    "source": [
     "spark.sql(\"select * from orders inner join customers on orders.customer_id == customers.customerid\").write.format(\"noop\").mode(\"overwrite\").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b20f8fe",
+   "metadata": {},
+   "source": [
+    "Partition Skew"
    ]
   },
   {
@@ -106,7 +130,7 @@
     "orders_new_df = spark.read \\\n",
     ".format(\"csv\") \\\n",
     ".schema(orders_schema) \\\n",
-    ".load(\"/public/trendytech/retail_db/ordersnew\")"
+    ".load(\"/public/trendytech/retail_db/ordersnew\") "
    ]
   },
   {
@@ -135,7 +159,31 @@
     }
    ],
    "source": [
-    "orders_new_df.groupBy(\"order_status\").count().collect()"
+    "orders_new_df.groupBy(\"order_status\").count().collect() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f4671cb",
+   "metadata": {},
+   "source": [
+    "As we know we have 9 partitions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "509428f1",
+   "metadata": {},
+   "source": [
+    "the key COMPLETE has 46008801 (1.2 gb ) and all the complete will go to the one partition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf41b13f",
+   "metadata": {},
+   "source": [
+    "this will issues partition skew"
    ]
   },
   {
@@ -145,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapping_schema = \"status string, code int\""
+    "mapping_schema = \"status string, code int\" "
    ]
   },
   {
@@ -254,6 +302,38 @@
    "outputs": [],
    "source": [
     "orders_new_df.join(mapping_df, orders_new_df.order_status == mapping_df.status, \"inner\").write.format(\"noop\").mode(\"overwrite\").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ebfc5ee",
+   "metadata": {},
+   "source": [
+    "As we know we are doing the Normal join since we disable the broadcast join"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0a19435",
+   "metadata": {},
+   "source": [
+    "when we do shuffle all the 223 partition will execute out of 224"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6131798b",
+   "metadata": {},
+   "source": [
+    "Only one task will take more time so this is not doing the parallel processing due to one partition will be big"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9cb9c9c",
+   "metadata": {},
+   "source": [
+    "This may lead out of memory"
    ]
   },
   {
