--- a/Pyspark_Master/M7_Expert/M3_use-case.ipynb
+++ b/Pyspark_Master/M7_Expert/M3_use-case.ipynb
@@ -63,7 +63,15 @@
     "customers_df = spark.read \\\n",
     ".format(\"csv\") \\\n",
     ".schema(customer_schema) \\\n",
-    ".load(\"/public/trendytech/retail_db/customersnew\")"
+    ".load(\"/public/trendytech/retail_db/customersnew\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1ad34b0",
+   "metadata": {},
+   "source": [
+    "customersnew is 12 mb size and orders_df is big size file data"
    ]
   },
   {
