--- a/Pyspark_Master/M7_Expert/M4_AQE_1.ipynb
+++ b/Pyspark_Master/M7_Expert/M4_AQE_1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ec4f694b",
+   "id": "9713e2a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ea87605b",
+   "id": "c4546473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "88862fab",
+   "id": "145898ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,60 +46,66 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f00cad8b",
+   "id": "55b47fd9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer_schema = \"customerid long , customer_fname string , customer_lname string , user_name string,password string , address string, city string, state string, pincode long \""
+    "orders_df.groupBy(\"order_status\").count().write.format(\"noop\").mode(\"overwrite\").save()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9a2fee20",
+   "cell_type": "markdown",
+   "id": "5517efd3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "customers_df = spark.read \\\n",
-    ".format(\"csv\") \\\n",
-    ".schema(customer_schema) \\\n",
-    ".load(\"/public/trendytech/retail_db/customersnew\")"
+    "It is dynamically coalesingg the number of shuffle partitions by using AQE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "67e48caf",
+   "id": "1531f206",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'false'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "orders_df.join(customers_df.distinct(), orders_df.customer_id == customers_df.distinct().customerid, \"inner\").write.format(\"noop\").mode(\"overwrite\").save()"
+    "spark.conf.get(\"spark.sql.adaptive.enabled\") "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "28f7467b",
+   "id": "ee0447bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.conf.set(\"spark.sql.adaptive.enabled\", True)"
+    "spark.conf.set(\"spark.sql.adaptive.enabled\", True) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5dd2c3a4",
+   "id": "8a1c8a27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_df.join(customers_df.distinct(), orders_df.customer_id == customers_df.distinct().customerid, \"inner\").write.format(\"noop\").mode(\"overwrite\").save()"
+    "orders_df.groupBy(\"order_status\").count().write.format(\"noop\").mode(\"overwrite\").save()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed3336f9",
+   "id": "bc9fc3d3",
    "metadata": {},
    "outputs": [],
    "source": []
