--- a/Pyspark_Master/M7_Expert/M5_AQE_2.ipynb
+++ b/Pyspark_Master/M7_Expert/M5_AQE_2.ipynb
@@ -17,7 +17,15 @@
     "config(\"spark.sql.warehouse.dir\", f\"/user/{username}/warehouse\"). \\\n",
     "enableHiveSupport(). \\\n",
     "master('yarn'). \\\n",
-    "getOrCreate()"
+    "getOrCreate() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00cee243",
+   "metadata": {},
+   "source": [
+    "2) Dynamically handle the partition skew"
    ]
   },
   {
@@ -94,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.conf.set(\"spark.sql.adaptive.enabled\", True)"
+    "spark.conf.set(\"spark.sql.adaptive.enabled\", True) "
    ]
   },
   {
