--- a/Pyspark_Master/M7_Expert/M6_AQE_3.ipynb
+++ b/Pyspark_Master/M7_Expert/M6_AQE_3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9713e2a9",
+   "id": "ec4f694b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ed7f10d",
+   "metadata": {},
+   "source": [
+    "3) Switching from shufflejoin to broadcast join"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c4546473",
+   "id": "ea87605b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "145898ad",
+   "id": "88862fab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,38 +54,40 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "55b47fd9",
+   "id": "f00cad8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_df.groupBy(\"order_status\").count().write.format(\"noop\").mode(\"overwrite\").save()"
+    "customer_schema = \"customerid long , customer_fname string , customer_lname string , user_name string,password string , address string, city string, state string, pincode long \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9a2fee20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customers_df = spark.read \\\n",
+    ".format(\"csv\") \\\n",
+    ".schema(customer_schema) \\\n",
+    ".load(\"/public/trendytech/retail_db/customersnew\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1531f206",
+   "id": "67e48caf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'false'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "spark.conf.get(\"spark.sql.adaptive.enabled\")"
+    "orders_df.join(customers_df.distinct(), orders_df.customer_id == customers_df.distinct().customerid, \"inner\").write.format(\"noop\").mode(\"overwrite\").save()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ee0447bc",
+   "id": "28f7467b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,17 +97,17 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8a1c8a27",
+   "id": "5dd2c3a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_df.groupBy(\"order_status\").count().write.format(\"noop\").mode(\"overwrite\").save()"
+    "orders_df.join(customers_df.distinct(), orders_df.customer_id == customers_df.distinct().customerid, \"inner\").write.format(\"noop\").mode(\"overwrite\").save()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc9fc3d3",
+   "id": "ed3336f9",
    "metadata": {},
    "outputs": [],
    "source": []
