--- a/Pyspark_Master/M7_Expert/M7_JoinTypes.ipynb
+++ b/Pyspark_Master/M7_Expert/M7_JoinTypes.ipynb
@@ -67,6 +67,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7fdf8b8d",
+   "metadata": {},
+   "source": [
+    "Inner"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "6f60fe3f",
@@ -140,6 +148,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d2e8ea51",
+   "metadata": {},
+   "source": [
+    "Left"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "3ce34f1f",
@@ -183,6 +199,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45f8a740",
+   "metadata": {},
+   "source": [
+    "Right"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "b2883df1",
@@ -223,6 +247,14 @@
    ],
    "source": [
     "orders_df.join(customers_df, orders_df.customer_id == customers_df.customerid, \"right\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a5394dd",
+   "metadata": {},
+   "source": [
+    "Full"
    ]
   },
   {
@@ -320,6 +352,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35791974",
+   "metadata": {},
+   "source": [
+    "Semi : Customers who have placed atleast one order"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "c75a03e0",
@@ -360,6 +400,22 @@
    ],
    "source": [
     "customers_df.join(orders_df, orders_df.customer_id == customers_df.customerid, \"semi\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a277405b",
+   "metadata": {},
+   "source": [
+    "Anti : Customer who have never placed any orders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf0b2e16",
+   "metadata": {},
+   "source": [
+    "oppsite to semi"
    ]
   },
   {
