--- a/Pyspark_Master/M7_Expert/M8_JoinStrategies.ipynb
+++ b/Pyspark_Master/M7_Expert/M8_JoinStrategies.ipynb
@@ -88,6 +88,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef2fc023",
+   "metadata": {},
+   "source": [
+    "1 ) Broadcast Join"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "404160bb",
@@ -121,6 +129,14 @@
    ],
    "source": [
     "orders_df.join(customers_df, orders_df.customer_id == customers_df.customerid, \"inner\").explain()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fb57815",
+   "metadata": {},
+   "source": [
+    "2 ) SortMerge Join"
    ]
   },
   {
@@ -173,6 +189,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1dda1493",
+   "metadata": {},
+   "source": [
+    "3 ) Shuffle Hash Join"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "224d9c89",
@@ -210,12 +234,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14716287",
+   "metadata": {},
+   "source": [
+    "Note : Shuffle_merge (Normal Join)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "672126a5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "orders_df.join(customers_df.hint(\"shuffle_merge\"), orders_df.customer_id == customers_df.customerid, \"inner\").explain()"
+   ]
   }
  ],
  "metadata": {
