--- a/Pyspark_Master/M7_Expert2/M1_Spark_Memory_Management.ipynb
+++ b/Pyspark_Master/M7_Expert2/M1_Spark_Memory_Management.ipynb
@@ -99,6 +99,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "edbad7e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.conf.set('spark.sql.autoBroadcastJoinThreshold','-1') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "048b67d7",
+   "metadata": {},
+   "source": [
+    "Runing a job with one executor and 200 partitions"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "9e0f400b",
    "metadata": {},
@@ -108,13 +126,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5269f7ab",
+   "metadata": {},
+   "source": [
+    "If i run with one executor and patition = 2 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80f4259c",
+   "metadata": {},
+   "source": [
+    "I will get spill memory "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "848e250f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.conf.set(\"spark.sql.shuffle.partitions\", \"2\")"
+    "spark.conf.set(\"spark.sql.shuffle.partitions\", \"2\") "
    ]
   },
   {
