Organized in week6

--- a/Pyspark_Master/M3_Amateur/M5_Week6_RDD_to_DataFrame.ipynb
+++ b/Pyspark_Master/M3_Amateur/M5_Week6_RDD_to_DataFrame.ipynb
@@ -61,6 +61,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7d9878d",
+   "metadata": {},
+   "source": [
+    "converting RDD to DataFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "806fb384",
    "metadata": {},
    "source": [
