--- a/Pyspark_Master/M7_Expert2/M4_Catalyst_Optimizer.ipynb
+++ b/Pyspark_Master/M7_Expert2/M4_Catalyst_Optimizer.ipynb
@@ -13,8 +13,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data",
-     "source": "user"
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -44,8 +43,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data",
-     "source": "user"
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -54,8 +52,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data",
-     "source": "user"
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -174,6 +171,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6efec680",
+   "metadata": {},
+   "source": [
+    "Creating New Rules "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "e3a0478a",
@@ -199,8 +204,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data",
-     "source": "user"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -227,8 +231,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data",
-     "source": "user"
+     "output_type": "display_data"
     }
    ],
    "source": [
