Changes add in project

--- a/Pyspark_Master/M8_Projects/M1_LendingClub_Intro.ipynb
+++ b/Pyspark_Master/M8_Projects/M1_LendingClub_Intro.ipynb
@@ -126,6 +126,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e1c09cd2",
+   "metadata": {},
+   "source": [
+    "Here every member has multiple loan "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd874c03",
+   "metadata": {},
+   "source": [
+    "Since member id is null we need unique values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73fe86b1",
+   "metadata": {},
+   "source": [
+    "Need to genereate the unique values baed on the attributes [\"emp_title\", \"emp_length\", \"home_ownership\", \"annual_inc\", \"zip_code\", \"addr_state\", \"grade\", \"sub_grade\",\"verification_status\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0db38109",
+   "metadata": {},
+   "source": [
+    "we generate the unique value based on the hash functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "a0a9a8fb",
