--- a/Pyspark_Master/M8_Projects/M10_LendingClub_FinalLoanScore.ipynb
+++ b/Pyspark_Master/M8_Projects/M10_LendingClub_FinalLoanScore.ipynb
@@ -29,6 +29,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "87b2182e",
+   "metadata": {},
+   "source": [
+    "## User Defined Variable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "f2c234b4",
